--- a/src/css/tokens.css
+++ b/src/css/tokens.css
@@ -1,4 +1,5 @@
 @import url('./color-tokens.css');
 @import url('./typography-tokens.css');
-@import url('./unit-tokens.css');
+@import url('./spacing-tokens.css');
 @import url('./border-tokens.css');
+@import url('./animation-tokens.css');
