--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -3,5 +3,5 @@
   align-items: flex-start;
   justify-content: space-between;
   padding: var(--spacing-10) 0;
-  border-bottom: var(--border-width-thin) solid var(--color-gray);
+  border-bottom: var(--border-width-thin) solid var(--border-default);
 }
