--- a/src/global.css
+++ b/src/global.css
@@ -7,8 +7,8 @@
 }
 
 body {
-  background: var(--background-color);
-  color: var(--color);
+  background: var(--bg-primary);
+  color: var(--text-primary);
   font-family: var(--font-family);
 
   &::before {
@@ -19,8 +19,8 @@ body {
     width: 100%;
     height: 100%;
     background-image:
-      linear-gradient(rgb(149 197 239 / 3%) 1px, transparent 1px),
-      linear-gradient(90deg, rgb(149 197 239 / 3%) 1px, transparent 1px);
+      linear-gradient(var(--grid-color) 1px, transparent 1px),
+      linear-gradient(90deg, var(--grid-color) 1px, transparent 1px);
     background-size: 30px 30px;
     content: '';
     pointer-events: none;
