--- a/src/css/tokens.css
+++ b/src/css/tokens.css
@@ -3,3 +3,4 @@
 @import url('./spacing-tokens.css');
 @import url('./border-tokens.css');
 @import url('./animation-tokens.css');
+@import url('./shadow-tokens.css');
