--- a/src/components/common/tech-stack/tech-stack.module.css
+++ b/src/components/common/tech-stack/tech-stack.module.css
@@ -7,7 +7,7 @@
 
 .tag {
   padding: var(--spacing-1) var(--spacing-3);
-  border: var(--border-width-thin) solid var(--border-default);
+  border: var(--border-default);
   color: var(--text-secondary);
   font-size: var(--font-size-meta);
   white-space: nowrap;
