Design tweaks to Hero and featured work

--- a/src/components/home/featured-work/featured-work.module.css
+++ b/src/components/home/featured-work/featured-work.module.css
@@ -15,7 +15,9 @@
 .grid {
   display: grid;
   gap: var(--spacing-8);
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 1fr 1fr;
+
+  /* grid-template-columns: 2fr 1fr; */
 
   @media (--lg-n-below) {
     grid-template-columns: 1fr;
