--- a/src/components/common/terminal-window/terminal-window.module.css
+++ b/src/components/common/terminal-window/terminal-window.module.css
@@ -8,6 +8,8 @@
 .header {
   display: flex;
   align-items: center;
+  padding-bottom: var(--spacing-5);
+  border-bottom: 1px solid var(--border-default-color);
   margin-bottom: var(--spacing-5);
   gap: var(--spacing-3);
 }
