--- a/src/components/layout/header/header.module.css
+++ b/src/components/layout/header/header.module.css
@@ -4,4 +4,9 @@
   justify-content: space-between;
   padding: var(--spacing-10) 0;
   border-bottom: var(--border-default);
+
+  @media (--md-n-below) {
+    flex-direction: column;
+    gap: var(--spacing-6);
+  }
 }
