--- a/src/components/layout/header/logo.module.css
+++ b/src/components/layout/header/logo.module.css
@@ -3,25 +3,35 @@
   align-items: center;
   gap: var(--spacing-4);
 
-  .terminal-prompt {
-    color: var(--accent-secondary);
-    font-family: var(--mono-font-family);
+  @media (--md-n-below) {
+    flex-wrap: wrap;
   }
+}
 
-  .logo {
-    color: var(--text-primary);
-    font-family: var(--accent-font-family);
-    font-size: var(--font-size-h5);
-    font-weight: var(--font-weight-bold);
-    letter-spacing: var(--letter-spacing-wider);
-  }
+.terminal-prompt {
+  color: var(--accent-secondary);
+  font-family: var(--mono-font-family);
+}
 
-  .tagline {
-    margin-left: var(--spacing-5);
-    color: var(--accent-secondary);
-    font-family: var(--mono-font-family);
-    font-size: 13px;
-    letter-spacing: var(--letter-spacing-wide);
-    opacity: 0.8;
+.logo {
+  color: var(--text-primary);
+  font-family: var(--accent-font-family);
+  font-size: var(--font-size-h5);
+  font-weight: var(--font-weight-bold);
+  letter-spacing: var(--letter-spacing-wider);
+}
+
+.tagline {
+  margin-left: var(--spacing-5);
+  color: var(--accent-secondary);
+  font-family: var(--mono-font-family);
+  font-size: 13px;
+  letter-spacing: var(--letter-spacing-wide);
+  opacity: 0.8;
+
+  @media (--md-n-below) {
+    flex-basis: 100%;
+    margin-left: 0;
+    padding-left: calc(var(--spacing-4) + 1ch);
   }
 }
