--- a/src/css/color-tokens.css
+++ b/src/css/color-tokens.css
@@ -50,7 +50,7 @@
   /* Terminal */
   --terminal-red: #ff4500;
   --terminal-yellow: #fc0;
-  --terminal-blue: #06c;
+  --terminal-blue: #769cbd;
 
   /* Grid overlay */
   --grid-color: rgb(0 102 204 / 3%);
