--- a/src/components/page/page-container.module.css
+++ b/src/components/page/page-container.module.css
@@ -1,5 +1,9 @@
 .page-container {
   max-width: 1400px;
-  padding: 0 60px;
+  padding: 0 var(--spacing-14);
   margin: 0 auto;
+
+  @media (--sm-n-below) {
+    padding: 0 var(--spacing-5);
+  }
 }
