--- a/src/components/layout/header/header.module.css
+++ b/src/components/layout/header/header.module.css
@@ -1,12 +1,13 @@
 .header {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: space-between;
   padding: var(--spacing-10) 0;
   border-bottom: var(--border-default);
 
   @media (--sm-n-below) {
     flex-direction: column;
+    align-items: flex-start;
     gap: var(--spacing-6);
   }
 }
